--- a/optigra-ads-rest-api/build.gradle
+++ b/optigra-ads-rest-api/build.gradle
@@ -1,35 +1,25 @@
 apply plugin: 'java'
-apply plugin: 'eclipse'
-
-sourceCompatibility = 1.7
-
-version = '1.0'
-
-jar {
-    manifest {
-        attributes 'optigra': 'ads', 'rest-api': version
-    }
-}
+apply plugin: 'war'
+apply plugin: 'eclipse-wtp'
 
 repositories {
-    mavenCentral()
+   mavenCentral()
 }
 
 dependencies {
-    compile project(':optigra-ads-facade')
-    compile project(':optigra-ads-common')
-
-    testCompile group: 'junit', name: 'junit', version: '4.+'
-}
-
-test {
-    systemProperties 'property': 'value'
-}
-
-uploadArchives {
-    repositories {
-       flatDir {
-           dirs 'repos'
-       }
-    }
+	compile 'javax.servlet:servlet-api:2.5'
+	
+	compile 'org.springframework:spring-webmvc:3.2.2.RELEASE'
+	compile 'org.springframework:spring-web:3.2.2.RELEASE'
+	compile 'org.springframework:spring-core:3.2.2.RELEASE'
+	compile 'org.springframework:spring-beans:3.2.2.RELEASE'
+	compile 'org.springframework:spring-context:3.2.2.RELEASE'
+	compile 'org.springframework:spring-test:3.2.2.RELEASE'
+	
+	runtime 'javax.servlet:jstl:1.1.2'
+	compile project(':optigra-ads-facade')
+	compile project(':optigra-ads-common')
+	
+	testCompile group: 'junit', name: 'junit', version: '4.+'
+	testCompile(group: 'org.mockito', name: 'mockito-all', version: '1.+')
 }
