--- a/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -11,16 +11,19 @@
 			org.springframework.web.context.support.AnnotationConfigWebApplicationContext
 		</param-value>
 	</context-param>
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>org.optigra.ads.config</param-value>
+		<param-value>org.optigra.ads.config.AppConfig</param-value>
 	</context-param>
+	
+	<listener>
+      <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  	</listener>
 
 	<servlet>
 		<servlet-name>dispatcherServlet</servlet-name>
-		<servlet-class>
-			org.springframework.web.servlet.DispatcherServlet
-		</servlet-class>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextClass</param-name>
 			<param-value>
@@ -29,7 +32,7 @@
 		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>org.optigra.ads.config</param-value>
+			<param-value>org.optigra.ads.config.WebConfig</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
