--- a/optigra-ads-rest-api/build.gradle
+++ b/optigra-ads-rest-api/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'eclipse-wtp'
 
+war {
+  archiveName "${baseName}.${extension}" 
+}
+
 repositories {
    mavenCentral()
 }
@@ -16,9 +20,13 @@ dependencies {
 	compile 'org.springframework:spring-context:3.2.2.RELEASE'
 	compile 'org.springframework:spring-test:3.2.2.RELEASE'
 	
+	compile 'org.codehaus.jackson:jackson-core-asl:1.9.13'
+	compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+	
 	runtime 'javax.servlet:jstl:1.1.2'
 	compile project(':optigra-ads-facade')
 	compile project(':optigra-ads-common')
+	compile project(':optigra-ads-model')
 	
 	testCompile group: 'junit', name: 'junit', version: '4.+'
 	testCompile(group: 'org.mockito', name: 'mockito-all', version: '1.+')
