--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'eclipse'
+    apply plugin: 'eclipse-wpt'
 
     apply plugin: 'checkstyle'
     apply plugin: 'pmd'
