Introduction of dao layer.

--- a/optigra-ads-dao/build.gradle
+++ b/optigra-ads-dao/build.gradle
@@ -18,7 +18,8 @@ repositories {
 dependencies {
     compile project(':optigra-ads-model')
 
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    compile 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api:1.0.1.Final'
+            
 }
 
 test {
