--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ subprojects {
     }
 
     dependencies {
-        testCompile 'junit:junit:4.8.2'
+        testCompile group: 'junit', name: 'junit', version: '4.+'
+        testCompile(group: 'org.mockito', name: 'mockito-all', version: '1.+')
     }
 
     jar {
