--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ subprojects {
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.+'
         testCompile(group: 'org.mockito', name: 'mockito-all', version: '1.+')
+        
+        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
+        compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.5'
+        compile group: 'log4j',     name: 'log4j', version: '1.2.17'
     }
 
     jar {
