--- a/optigra-ads-rest-api/build.gradle
+++ b/optigra-ads-rest-api/build.gradle
@@ -23,8 +23,9 @@ dependencies {
 	compile 'org.springframework:spring-context:3.2.2.RELEASE'
 	compile 'org.springframework:spring-test:3.2.2.RELEASE'
 	
-	compile 'org.codehaus.jackson:jackson-core-asl:1.9.13'
-	compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
+	compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
+	compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
 	
 	runtime 'javax.servlet:jstl:1.1.2'
 }
