--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,6 @@ include ':optigra-ads-facade'
 include ':optigra-ads-content'
 include ':optigra-ads-search-engine'
 include ':optigra-ads-common'
+include ':optigra-ads-security'
 include ':optigra-ads-rest-api'
 
