--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,15 @@ subprojects {
         compile 'org.springframework:spring-beans:3.2.6.RELEASE'
 	    compile 'org.springframework:spring-context:3.2.6.RELEASE'
 	    compile 'org.springframework:spring-test:3.2.6.RELEASE'
+	    compile 'org.springframework:spring-aspects:3.2.6.RELEASE'
+	    compile 'org.springframework:spring-tx:3.2.6.RELEASE'
+	    
+        compile 'org.hibernate:hibernate-core:4.2.0.Final'
+        compile 'org.hibernate:hibernate-entitymanager:4.2.0.Final'
+        compile 'org.hibernate:hibernate-validator:4.2.0.Final'
+        compile 'org.springframework:spring-orm:3.2.0.RELEASE'
+        compile 'postgresql:postgresql:9.1-901.jdbc4'
+        compile 'javax.annotation:jsr250-api:1.0'
     }
 
     jar {
