--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,19 @@ subprojects {
     sourceCompatibility = 1.7
     version = '1.0'
 
+    /*
+    //Import project properties
+    Properties props = new Properties()
+    props.load(new FileInputStream("config/${envName}.properties"))
+
+    for ( prop in props.entrySet() ) {
+        project.ext.set(prop.getKey(), prop.getValue());
+    }
+
+
+    println project.ext.properties
+   */
+
     repositories {
        mavenCentral()
     }
@@ -23,10 +36,10 @@ subprojects {
         
         compile 'org.springframework:spring-core:3.2.6.RELEASE'
         compile 'org.springframework:spring-beans:3.2.6.RELEASE'
-	    compile 'org.springframework:spring-context:3.2.6.RELEASE'
-	    compile 'org.springframework:spring-test:3.2.6.RELEASE'
-	    compile 'org.springframework:spring-aspects:3.2.6.RELEASE'
-	    compile 'org.springframework:spring-tx:3.2.6.RELEASE'
+        compile 'org.springframework:spring-context:3.2.6.RELEASE'
+	compile 'org.springframework:spring-test:3.2.6.RELEASE'
+	compile 'org.springframework:spring-aspects:3.2.6.RELEASE'
+	compile 'org.springframework:spring-tx:3.2.6.RELEASE'
 	    
         compile 'org.hibernate:hibernate-core:4.2.0.Final'
         compile 'org.hibernate:hibernate-entitymanager:4.2.0.Final'
