--- a/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,7 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
 			classpath*:service-context.xml
+			classpath*:facade-context.xml
 			classpath*:dao-context.xml
 			classpath*:security-context.xml
 		</param-value>
