--- a/optigra-ads-model/build.gradle
+++ b/optigra-ads-model/build.gradle
@@ -16,6 +16,8 @@ repositories {
 }
 
 dependencies {
+    compile project(':optigra-ads-common')
+    
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
