--- a/optigra-ads-web-client/bower.json
+++ b/optigra-ads-web-client/bower.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "dependencies": {
     "jquery": "~1.9.0",
-    "underscore": "~1.4.3",
-    "backbone": "~1.0.0",
     "requirejs": "~2.1.5",
     "requirejs-text": "~2.0.5",
     "modernizr": "~2.6.2",
-    "marionette": "~1.6.2"
+    "marionette": "~1.6.2",
+    "bootstrap": "~3.1.0",
+    "underscore-amd": "~1.5.2",
+    "backbone-amd": "~1.1.0",
+    "require-handlebars-plugin": "~0.7.0"
   },
   "devDependencies": {}
 }
