--- a/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,11 @@
   	</listener>
   	
   	<filter>
+  		<filter-name>authenticationRequestFilter</filter-name>
+  		<filter-class>org.optigra.ads.rest.web.filter.AuthenticationRequestFilter</filter-class>
+	</filter>
+  	
+  	<filter>
   		<filter-name>springSecurityFilterChain</filter-name>
   		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
@@ -36,6 +41,11 @@
 			<param-value>true</param-value>
 		</init-param>
 	</filter>
+	
+	<filter-mapping>
+  		<filter-name>authenticationRequestFilter</filter-name>
+  		<url-pattern>/api/*</url-pattern>
+	</filter-mapping>
 	
 	<filter-mapping>
   		<filter-name>springSecurityFilterChain</filter-name>
