Implemented configuration service.

--- a/optigra-ads-rest-api/src/main/resources/application.properties
+++ b/optigra-ads-rest-api/src/main/resources/application.properties
@@ -6,3 +6,5 @@ jdbc.username=postgres
 jdbc.password=postgres
 jpa.database=POSTGRESQL
 jpa.showSql=true 
+
+application.api.context.path=http://optigra-ads.dev.optigra.org/optigra-ads-rest-api/api
