--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include ':optigra-ads-security'
 include ':optigra-ads-rest-api'
 include ':optigra-ads-notification'
 
+include ':optigra-ads-database'
