Added content layer

--- a/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,7 @@
 			classpath*:facade-context.xml
 			classpath*:dao-context.xml
 			classpath*:security-context.xml
+			classpath*:content-context.xml
 		</param-value>
 	</context-param>
 	
