--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ subprojects {
         compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.5'
         compile group: 'log4j',     name: 'log4j', version: '1.2.17'
         
+        compile 'org.springframework:spring-web:3.2.6.RELEASE'
         compile 'org.springframework:spring-core:3.2.6.RELEASE'
         compile 'org.springframework:spring-beans:3.2.6.RELEASE'
         compile 'org.springframework:spring-context:3.2.6.RELEASE'
@@ -51,6 +52,14 @@ subprojects {
         compile 'com.fasterxml.jackson.core:jackson-core:2.3.0'
         compile 'com.fasterxml.jackson.core:jackson-annotations:2.3.0'
         compile 'com.fasterxml.jackson.core:jackson-databind:2.3.0'
+        
+        compile ('org.apache.jackrabbit:jackrabbit-core:2.2.4') {
+             exclude group: 'org.slf4j'
+        }
+        
+        compile 'javax.jcr:jcr:2.0'
+        compile 'commons-fileupload:commons-fileupload:1.2.2'
+        
     }
 
     jar {
