--- a/optigra-ads-content/build.gradle
+++ b/optigra-ads-content/build.gradle
@@ -17,6 +17,8 @@ repositories {
 
 dependencies {
     compile project(':optigra-ads-common')
+    
+    compile 'javax.servlet:servlet-api:2.5'
 
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
