--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ subprojects {
         }
         
         compile 'commons-fileupload:commons-fileupload:1.2.2'
+        compile 'org.tuckey:urlrewritefilter:3.2.0'
     }
 
     jar {
