--- a/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,11 @@
       <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   	</listener>
   	
+	<filter>
+	    <filter-name>UrlRewriteFilter</filter-name>
+	    <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
+	</filter>
+  	
   	<filter>
   		<filter-name>authenticationRequestFilter</filter-name>
   		<filter-class>org.optigra.ads.rest.web.filter.AuthenticationRequestFilter</filter-class>
@@ -42,6 +47,13 @@
 			<param-value>true</param-value>
 		</init-param>
 	</filter>
+	
+	<filter-mapping>
+	    <filter-name>UrlRewriteFilter</filter-name>
+	    <url-pattern>/*</url-pattern>
+	    <dispatcher>REQUEST</dispatcher>
+	    <dispatcher>FORWARD</dispatcher>
+	</filter-mapping>   
 	
 	<filter-mapping>
   		<filter-name>authenticationRequestFilter</filter-name>
