--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ subprojects {
         compile 'org.springframework:spring-test:3.2.6.RELEASE'
 	    compile 'org.springframework:spring-aspects:3.2.6.RELEASE'
 	    compile 'org.springframework:spring-tx:3.2.6.RELEASE'
+	    compile 'org.springframework.security:spring-security-config:3.2.0.RELEASE'
+    	compile 'org.springframework.security:spring-security-web:3.2.0.RELEASE'
 	    
         compile 'org.hibernate:hibernate-core:4.2.0.Final'
         compile 'org.hibernate:hibernate-entitymanager:4.2.0.Final'
