Configured pretty print for JSON.

--- a/optigra-ads-rest-api/src/main/resources/application.properties
+++ b/optigra-ads-rest-api/src/main/resources/application.properties
@@ -8,3 +8,5 @@ jpa.database=POSTGRESQL
 jpa.showSql=true 
 
 application.api.context.path=http://optigra-ads.dev.optigra.org/optigra-ads-rest-api/api
+
+http.respone.json.pretty=true
