--- a/optigra-ads-rest-api/src/main/resources/application.properties
+++ b/optigra-ads-rest-api/src/main/resources/application.properties
@@ -10,3 +10,13 @@ jpa.showSql=true
 application.api.context.path=http://optigra-ads.dev.optigra.org/optigra-ads-rest-api/api
 
 http.respone.json.pretty=true
+
+mail.from=Ivanon2@gmail.com
+mail.host=smtp.gmail.com
+mail.port=587
+mail.username=Ivanon2@gmail.com
+mail.password=very_funny:)
+
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.smtp.ssl.trust=smtp.gmail.com
