Improved mailing module

--- a/optigra-ads-rest-api/src/main/resources/application.properties
+++ b/optigra-ads-rest-api/src/main/resources/application.properties
@@ -15,7 +15,7 @@ mail.from=Ivanon2@gmail.com
 mail.host=smtp.gmail.com
 mail.port=587
 mail.username=Ivanon2@gmail.com
-mail.password=very_funny:)
+mail.password=very.funny:)
 
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
