Added apns push notifications

--- a/optigra-ads-rest-api/src/main/resources/application.properties
+++ b/optigra-ads-rest-api/src/main/resources/application.properties
@@ -20,3 +20,5 @@ mail.password=very.funny:)
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 mail.smtp.ssl.trust=smtp.gmail.com
+
+batch.limit=20
