--- a/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,7 @@
 			classpath*:dao-context.xml
 			classpath*:security-context.xml
 			classpath*:content-context.xml
+			classpath*:notification-context.xml
 		</param-value>
 	</context-param>
 	
