--- a/optigra-ads-notification/build.gradle
+++ b/optigra-ads-notification/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.7
 version = '1.0'
 jar {
     manifest {
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
 	compile project(':optigra-ads-model')
+	compile project(':optigra-ads-dao')
     compile 'commons-collections:commons-collections:3.2'
     compile 'com.notnoop.apns:apns:0.2.3'
     compile 'org.slf4j:slf4j-api:1.5.6'
