--- a/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -58,12 +58,12 @@
 	
 	<filter-mapping>
   		<filter-name>authenticationRequestFilter</filter-name>
-  		<url-pattern>/api/*</url-pattern>
+  		<url-pattern>/v1/*</url-pattern>
 	</filter-mapping>
 	
 	<filter-mapping>
   		<filter-name>springSecurityFilterChain</filter-name>
-  		<url-pattern>/api/*</url-pattern>
+  		<url-pattern>/v1/*</url-pattern>
 	</filter-mapping>
 	
 	<filter-mapping>
@@ -76,14 +76,14 @@
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>WEB-INF/spring-mvc-servlet.xml</param-value>
+			<param-value>WEB-INF/sprinpi/apig-mvc-servlet.xml</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
 	<servlet-mapping>
 		<servlet-name>dispatcherServlet</servlet-name>
-		<url-pattern>/api/*</url-pattern>
+		<url-pattern>/v1/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
