Implemented VK OAuth.

--- a/environments/development/application.properties
+++ b/environments/development/application.properties
@@ -24,10 +24,10 @@ mail.smtp.ssl.trust=smtp.gmail.com
 batch.limit=20
 
 #My Pablici
-my.pablici.home.url=http://localhost:8080/pablici-my-console
+my.pablici.home.url=http://optigra-ads.dev.optigra.org/pablici-my-console
 
 #Social
 social.vk.clientId=4407673
 social.vk.secretKey=b3c7m1zNrXLwhKZ97tAQ
-social.vk.redirect.url=http://localhost:8080/optigra-ads-rest-api/v1/authorize/vkontakte
+social.vk.redirect.url=http://optigra-ads.dev.optigra.org/optigra-ads-rest-api/v1/authorize/vkontakte
 social.vk.url.template=https://oauth.vk.com/access_token?client_id={clientId}&client_secret={secretKey}&code={code}&redirect_uri={redirectUri}
