--- a/settings.gradle
+++ b/settings.gradle
@@ -9,5 +9,6 @@ include ':optigra-ads-rest-api'
 include ':optigra-ads-notification'
 include ':optigra-ads-integration'
 include ':optigra-ads-mailing'
+include ':optigra-ads-social'
 
 include ':optigra-ads-database'
