--- a/environments/production/application.properties
+++ b/environments/production/application.properties
@@ -29,5 +29,5 @@ my.pablici.home.url=http://localhost:8080/pablici-my-console
 #Social
 social.vk.clientId=4407673
 social.vk.secretKey=b3c7m1zNrXLwhKZ97tAQ
-social.vk.redirect.url=http://localhost:8080/optigra-ads-rest-api/v1/authorize/vkontakte
+social.vk.redirect.url=http://prod:8080/optigra-ads-rest-api/v1/authorize/vkontakte
 social.vk.url.template=https://oauth.vk.com/access_token?client_id={clientId}&client_secret={secretKey}&code={code}&redirect_uri={redirectUri}
