--- a/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,7 @@
 			classpath*:security-context.xml
 			classpath*:content-context.xml
 			classpath*:notification-context.xml
+			classpath*:social-context.xml
 		</param-value>
 	</context-param>
 	
