Implemented error handling by error pages.

--- a/environments/production/application.properties
+++ b/environments/production/application.properties
@@ -1,13 +1,13 @@
 #Database configuration
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
-jdbc.databaseurl=jdbc:postgresql://localhost:5432/optigra-ads
-jdbc.username=postgres
-jdbc.password=postgres
+jdbc.databaseurl=jdbc:postgresql://localhost:5432/pablicidb
+jdbc.username=pabliciuser
+jdbc.password=pB7g4r!jk~
 jpa.database=POSTGRESQL
 jpa.showSql=true 
 
-application.api.context.path=http://optigra-ads.dev.optigra.org/optigra-ads-rest-api/v1
+application.api.context.path=http://api.pablici.com/v1
 
 http.respone.json.pretty=true
 
@@ -24,10 +24,10 @@ mail.smtp.ssl.trust=smtp.gmail.com
 batch.limit=20
 
 #My Pablici
-my.pablici.home.url=http://localhost:8080/pablici-my-console
+my.pablici.home.url=http://my.pablici.com
 
 #Social
 social.vk.clientId=4407673
 social.vk.secretKey=b3c7m1zNrXLwhKZ97tAQ
-social.vk.redirect.url=http://prod:8080/optigra-ads-rest-api/v1/authorize/vkontakte
+social.vk.redirect.url=http://api.pablici.com/v1/authorize/vkontakte
 social.vk.url.template=https://oauth.vk.com/access_token?client_id={clientId}&client_secret={secretKey}&code={code}&redirect_uri={redirectUri}
