Updated database migration config.

--- a/optigra-ads-database/build.gradle
+++ b/optigra-ads-database/build.gradle
@@ -33,6 +33,13 @@ apply plugin: 'liquibase'
             username = "postgres"
             password = "postgres"
         }
+        
+        production {
+            url = "jdbc:postgresql://localhost:5432/pablicidb"
+            username = "pabliciuser"
+            password = "pB7g4r!jk~"
+        }
+        
     }
     
     if(project.ext.has('serverName')){
