Implemented Autorization by Login and Password. Implemented CORS request handling.

--- a/environments/production/application.properties
+++ b/environments/production/application.properties
@@ -5,7 +5,14 @@ jdbc.databaseurl=jdbc:postgresql://localhost:5432/pablicidb
 jdbc.username=pabliciuser
 jdbc.password=pB7g4r!jk~
 jpa.database=POSTGRESQL
-jpa.showSql=true 
+jpa.showSql=true
+
+#Security HTTP CORS
+cors.allowed.origins=http://my.pablici.com
+cors.support.credentials=true
+cors.allowed.methods=GET, POST, PUT, DELETE, OPTIONS
+cors.allowed.headers=Authorization, Origin, Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers
+cors.preflight.maxage=86400 
 
 application.api.context.path=http://api.pablici.com/v1
 
@@ -27,7 +34,7 @@ batch.limit=20
 my.pablici.home.url=http://my.pablici.com
 
 #Social
-social.vk.clientId=4407673
-social.vk.secretKey=b3c7m1zNrXLwhKZ97tAQ
+social.vk.clientId=4417427
+social.vk.secretKey=6Gq5NZStci8mDYjyjqHb
 social.vk.redirect.url=http://api.pablici.com/v1/authorize/vkontakte
 social.vk.url.template=https://oauth.vk.com/access_token?client_id={clientId}&client_secret={secretKey}&code={code}&redirect_uri={redirectUri}
