--- a/optigra-ads-rest-api/src/main/resources/application.properties
+++ b/optigra-ads-rest-api/src/main/resources/application.properties
@@ -5,9 +5,16 @@ jdbc.databaseurl=jdbc:postgresql://localhost:5432/optigra-ads
 jdbc.username=postgres
 jdbc.password=postgres
 jpa.database=POSTGRESQL
-jpa.showSql=true 
+jpa.showSql=true
 
-application.api.context.path=http://optigra-ads.dev.optigra.org/optigra-ads-rest-api/v1
+#Security HTTP CORS
+cors.allowed.origins=http://my.pablici.com
+cors.support.credentials=true
+cors.allowed.methods=GET, POST, PUT, DELETE, OPTIONS
+cors.allowed.headers=*
+cors.preflight.maxage=86400 
+
+application.api.context.path=http://localhost:8080/optigra-ads-rest-api/v1
 
 http.respone.json.pretty=true
 
@@ -24,7 +31,7 @@ mail.smtp.ssl.trust=smtp.gmail.com
 batch.limit=20
 
 #My Pablici
-my.pablici.home.url=http://localhost:8080/pablici-my-console
+my.pablici.home.url=http://my.pablici.com
 
 #Social
 social.vk.clientId=4407673
