--- a/environments/development/application.properties
+++ b/environments/development/application.properties
@@ -5,7 +5,15 @@ jdbc.databaseurl=jdbc:postgresql://localhost:5432/optigra-ads
 jdbc.username=postgres
 jdbc.password=postgres
 jpa.database=POSTGRESQL
-jpa.showSql=true 
+jpa.showSql=true
+
+#Security HTTP CORS
+cors.allowed.origins=http://optigra-ads.dev.optigra.org
+cors.support.credentials=true
+cors.allowed.methods=GET, POST, PUT, DELETE, OPTIONS
+cors.allowed.headers=Authorization, Origin, Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers
+cors.preflight.maxage=86400
+ 
 
 application.api.context.path=http://optigra-ads.dev.optigra.org/optigra-ads-rest-api/v1
 
