--- a/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
+++ b/optigra-ads-rest-api/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,11 @@
       <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   	</listener>
   	
+  	<filter>
+  		<filter-name>corsFilter</filter-name>
+  		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  	</filter>
+  	
 	<filter>
 	    <filter-name>UrlRewriteFilter</filter-name>
 	    <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
@@ -36,6 +41,7 @@
   		<filter-name>springSecurityFilterChain</filter-name>
   		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
+	
 
 	<filter>
 		<filter-name>CharacterEncodingFilter</filter-name>
@@ -56,6 +62,11 @@
 	    <dispatcher>REQUEST</dispatcher>
 	    <dispatcher>FORWARD</dispatcher>
 	</filter-mapping>   
+
+	<filter-mapping>
+  		<filter-name>corsFilter</filter-name>
+  		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	
 	<filter-mapping>
   		<filter-name>authenticationRequestFilter</filter-name>
